Version 5.5.1
-------------

  feature
   - automatic reconnection of RPCs
   - lazy connection of RPC
   - fix memory leak of RPC on WebSockets
   - Allows multiple API names for RPC
   - send version offer lazyly
   - Compatibility between GNUTLS and MBEDTLS

  fix
   - compilation with WITHOUT_FILESYSTEM

Version 5.5.0
-------------

  feature
   - added function afb_perm_check_async
   - added ability to use an api for permission checking

Version 5.4.3
-------------

  fix
   - RPC blocking (#8016)

Version 5.4.2
-------------

  fix
   - correct dependency to librp-utils-core >= 0.2.3

  change
   - use system trust chain if no trust chain is already set
   - load trust chain file in order to detect encoding PEM or DER

Version 5.4.1
-------------

  feature
   - add 'host=' parameter in RPC URLs for setting or removing
     host name to check in TLS

  fix
   - support of mTLS when mbedTLS is the server
   - memory overflow when broadcasting events

  change
   - enforce afb-ev-mgr protection for concurrency

Version 5.4.0
-------------

  feature
   - support of LLEXT in Zephyr
   - support of Mbedtls for RPC
   - support of TLS or mTLS for RPC
   - allow global setting of TLS material

  fix
   - correctly handle NULL listener in afb-stub-rpc
   - handle correctly concurrent accesses in afb-stub-rpc
   - refactor of afb-thread

  change
   - remove of obsolete function afb_sched_call (use afb_sig_monitor_run)

Version 5.3.10
--------------

  fix
   - fix includes of libafb-config.h in libafbcli

Version 5.3.9
-------------

  fix
   - fix include of afb-vcomm

Version 5.3.8
-------------

  change
   - make timerfd as optional
   - allows minimal implementation of locale-root
   - allows use of poll instead of epoll in event loop


  feature
   - compatibility to Zephyr OS

  fix
   - bug #7594
   - big RPC buffers
   - TLS for RPC

Version 5.3.7
-------------

  change
   - RPC transmit type's name of not predefined types